--- a/src/index.html
+++ b/src/index.html
@@ -40,135 +40,6 @@
         <title>IMO | Password generator</title>
     </head>
     <body>
-        <div class="shortcuts" id="shortcuts">
-            <div class="container">
-                <div class="title">
-                    <div class="sections">
-                        <button class="active">Essentail</button>
-                        <button>Settings</button>
-                    </div>
-                    <i class="close fas fa-times-circle" id="shortcutsClose"></i>
-                </div>
-                <div class="main">
-                    <div class="column active">
-                        <ul>
-                            <li>
-                                <h6>Change theme</h6>
-                                <div class="keys">
-                                    <span>T</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Scroll to the main page</h6>
-                                <div class="keys">
-                                    <span>M</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Go up</h6>
-                                <div class="keys">
-                                    <span><i class="fas fa-arrow-up"></span>
-                                    <div class="char">/</div>
-                                    <span><i class="fas fa-arrow-left"></i></span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Go down</h6>
-                                <div class="keys">
-                                    <span><i class="fas fa-arrow-down"></span>
-                                    <div class="char">/</div>
-                                    <span><i class="fas fa-arrow-right"></i></span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Open keyboard shortcuts Panel</h6>
-                                <div class="keys">
-                                    <span>Ctrl</span>
-                                    <div class="char">+</div>
-                                    <span>/</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Open settings</h6>
-                                <div class="keys">
-                                    <span>Tab</span>
-                                </div>
-                            </li>
-                            <li class="hidden">
-                                <h6>*</h6>
-                                <div class="keys">
-                                    <span>*</span>
-                                </div>
-                            </li>
-                            <li class="hidden">
-                                <h6>*</h6>
-                                <div class="keys">
-                                    <span>*</span>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <ul>
-                            <li>
-                                <h6>Open settings</h6>
-                                <div class="keys">
-                                    <span>Tab</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Generate password</h6>
-                                <div class="keys">
-                                    <span>Enter</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Numbers</h6>
-                                <div class="keys">
-                                    <span>N</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Lowercase</h6>
-                                <div class="keys">
-                                    <span>L</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Upercase</h6>
-                                <div class="keys">
-                                    <span>U</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Symbols</h6>
-                                <div class="keys">
-                                    <span>S</span>
-                                </div>
-                            </li>
-                            <li>
-                                <h6>Ambiguous</h6>
-                                <div class="keys">
-                                    <span>A</span>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="shortcutPop" id="shortcutPop">
-            <div class="container">
-                <div class="message">
-                    <p>Show keyboard shortcuts</p>
-                    <div class="keys"><span>Ctrl</span><span>/</span></div>
-                </div>
-                <div class="buttons">
-                    <button>remember me later</button>
-                    <button>got it!</button>
-                </div>
-            </div>
-        </div>
         <header class="parent" id="main">
             <nav class="topnav" id="topnav">
                 <div class="container">
@@ -582,7 +453,7 @@
                         <span>1</span>
                         <p>
                             First, check out our fun
-                            <a href="#faqs">FAQs</a>
+                            <a href="javacript:void(0)">FAQs</a>
                             &
                             <a href="javacript:void(0)">Help Guides</a>
                             ...
@@ -687,6 +558,129 @@
                     ></textarea>
                     <button type="submit">Send</button>
                 </form>
+            </div>
+        </div>
+        <div class="shortcuts" id="shortcuts">
+            <div class="container">
+                <div class="title">
+                    <div class="sections">
+                        <button class="active">Essentail</button>
+                        <button>Settings</button>
+                    </div>
+                    <i class="close fas fa-times-circle" id="shortcutsClose"></i>
+                </div>
+                <div class="main">
+                    <div class="column active">
+                        <ul>
+                            <li>
+                                <h6>Change theme</h6>
+                                <div class="keys">
+                                    <span>T</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Scroll to the main page</h6>
+                                <div class="keys">
+                                    <span>M</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Go up</h6>
+                                <div class="keys">
+                                    <span><i class="fas fa-arrow-up"></span>
+                                    <div class="char">/</div>
+                                    <span><i class="fas fa-arrow-left"></i></span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Go down</h6>
+                                <div class="keys">
+                                    <span><i class="fas fa-arrow-down"></span>
+                                    <div class="char">/</div>
+                                    <span><i class="fas fa-arrow-right"></i></span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Jump / Stop scrolling</h6>
+                                <div class="keys">
+                                    <span class="large-3">space</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Open keyboard shortcuts Panel</h6>
+                                <div class="keys">
+                                    <span>Ctrl</span>
+                                    <div class="char">+</div>
+                                    <span>/</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Open settings</h6>
+                                <div class="keys">
+                                    <span class="large-1">Tab</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <ul>
+                            <li>
+                                <h6>Open settings</h6>
+                                <div class="keys">
+                                    <span class="large-1">Tab</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Generate password</h6>
+                                <div class="keys">
+                                    <span class="large-1">Enter</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Numbers</h6>
+                                <div class="keys">
+                                    <span>N</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Lowercase</h6>
+                                <div class="keys">
+                                    <span>L</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Upercase</h6>
+                                <div class="keys">
+                                    <span>U</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Symbols</h6>
+                                <div class="keys">
+                                    <span>S</span>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Ambiguous</h6>
+                                <div class="keys">
+                                    <span>A</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="shortcutPop" id="shortcutPop">
+            <div class="container">
+                <div class="message">
+                    <p>Show keyboard shortcuts</p>
+                    <div class="keys"><span>Ctrl</span><span>/</span></div>
+                </div>
+                <div class="buttons">
+                    <button>remember me later</button>
+                    <button>got it!</button>
+                </div>
             </div>
         </div>
         <footer>
