+ regenerate the setence

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,9 @@
                             <label for="fremember" id="copySentence">
                                 <i class="fas fa-clipboard"></i>
                             </label>
+                            <span class="reSentence" id="reSentence">
+                                <i class="fas fa-redo-alt"></i>
+                            </span>
                         </div>
                     </form>
                 </div>
