sun/moon theme toggle btn

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,8 @@
                             <ul>
                                 <li class="theme-button">
                                     <button id="switchTheme">
-                                        <i class="fas fa-sun"></i>
+                                        <i class="fas fa-sun sun"></i>
+                                        <i class="fas fa-moon moon"></i>
                                     </button>
                                 </li>
                                 <li class="menu" id="menu">
