animation on scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -222,7 +222,7 @@
             <div class="container">
                 <h2>Features</h2>
                 <ul>
-                    <li class="card">
+                    <li class="card fade-in">
                         <h3>Privacy</h3>
                         <div class="img">
                             <img src="./images/Features/1.svg" alt="Privacy" />
@@ -232,7 +232,7 @@
                             personal data
                         </p>
                     </li>
-                    <li class="card">
+                    <li class="card fade-in">
                         <h3>Full control</h3>
                         <div class="img">
                             <img src="./images/Features/2.svg" alt="Full control" />
@@ -242,7 +242,7 @@
                             and be satisfied with our service
                         </p>
                     </li>
-                    <li class="card">
+                    <li class="card fade-in">
                         <h3>Open source</h3>
                         <div class="img">
                             <img src="./images/Features/3.svg" alt="Open source" />
@@ -252,7 +252,7 @@
                             gives it great reliability and security
                         </p>
                     </li>
-                    <li class="card">
+                    <li class="card fade-in">
                         <h3>No ads</h3>
                         <div class="img">
                             <img src="./images/Features/4.svg" alt="No ads" />
@@ -263,7 +263,7 @@
                             You can support us on Patreon
                         </p>
                     </li>
-                    <li class="card">
+                    <li class="card fade-in">
                         <h3>Modern</h3>
                         <div class="img">
                             <img src="./images/Features/5.svg" alt="Modern" />
@@ -274,7 +274,7 @@
                             experience
                         </p>
                     </li>
-                    <li class="card">
+                    <li class="card fade-in">
                         <h3>Memorable</h3>
                         <div class="img">
                             <img src="./images/Features/6.svg" alt="Memorable" />
@@ -291,7 +291,7 @@
             <div class="container">
                 <h2>FAQs</h2>
                 <ul class="column">
-                    <li>
+                    <li class="from-left slide-in">
                         <div class="question">
                             <div class="chevron">
                                 <input type="hidden" name="chevron1" id="chevron1" />
@@ -306,7 +306,7 @@
                             password, hard to guess and to hack
                         </p>
                     </li>
-                    <li>
+                    <li class="from-left slide-in">
                         <div class="question">
                             <div class="chevron">
                                 <input type="hidden" name="chevron2" id="chevron2" />
@@ -324,7 +324,7 @@
                             code)
                         </p>
                     </li>
-                    <li>
+                    <li class="from-left slide-in">
                         <div class="question">
                             <div class="chevron">
                                 <input type="hidden" name="chevron3" id="chevron3" />
@@ -354,7 +354,7 @@
                             password.
                         </p>
                     </li>
-                    <li>
+                    <li class="from-left slide-in">
                         <div class="question">
                             <div class="chevron">
                                 <input type="hidden" name="chevron4" id="chevron4" />
@@ -371,7 +371,7 @@
                             letter, one special symbol, one ambiguous character
                         </p>
                     </li>
-                    <li>
+                    <li class="from-left slide-in">
                         <div class="question">
                             <div class="chevron">
                                 <input type="hidden" name="chevron5" id="chevron5" />
@@ -396,7 +396,7 @@
             </div>
         </div>
         <div class="aboutUs parent" id="aboutUs">
-            <div class="container">
+            <div class="container fade-in">
                 <div class="profile">
                     <div class="public">
                         <div class="img">
@@ -448,12 +448,12 @@
         </div>
         <div class="contactUs parent" id="contactUs">
             <div class="container">
-                <h2>
+                <h2 class="from-right slide-in">
                     Need help? <br />
                     Have some question? suggestion?
                 </h2>
                 <ul class="column">
-                    <li>
+                    <li class="from-right slide-in">
                         <span>1</span>
                         <p>
                             First, check out our fun
@@ -463,7 +463,7 @@
                             ...
                         </p>
                     </li>
-                    <li>
+                    <li class="from-right slide-in">
                         <span>2</span>
                         <p>
                             Still have a quick question? Get an instant reply on
@@ -475,13 +475,13 @@
                             ...
                         </p>
                     </li>
-                    <li>
+                    <li class="from-right slide-in">
                         <span>3</span>
                         <p>Need even more help? Click the button below</p>
                     </li>
                 </ul>
-                <button type="submit" id="emailButton">Email us</button>
-                <div class="img bg">
+                <button class="from-right slide-in" type="submit" id="emailButton">Email us</button>
+                <div class="img bg from-left slide-in">
                     <img src="./images/ContactUs/1.svg" alt="customers service" />
                 </div>
             </div>
@@ -489,7 +489,7 @@
         <div class="statistics parent">
             <div class="container">
                 <ul>
-                    <li>
+                    <li class="from-left slide-in">
                         <div class="square">
                             <div>
                                 20
@@ -501,7 +501,7 @@
                             <h5>Year</h5>
                         </div>
                     </li>
-                    <li>
+                    <li class="fade-in">
                         <div class="square">
                             <i class="fas fa-clock"></i>
                         </div>
@@ -510,7 +510,7 @@
                             <h5>72H</h5>
                         </div>
                     </li>
-                    <li>
+                    <li class="from-right slide-in">
                         <div class="square">
                             <i class="fas fa-user-circle"></i>
                         </div>
@@ -690,10 +690,10 @@
         <footer>
             <div class="footer__main parent">
                 <div class="container">
-                    <div class="img">
+                    <section class="img fade-in">
                         <img src="./images/logo128.jpg" alt="IMO logo" />
-                    </div>
-                    <section>
+                    </section>
+                    <section class="fade-in">
                         <h3>Information</h3>
                         <ul>
                             <li>
@@ -718,7 +718,7 @@
                             </li>
                         </ul>
                     </section>
-                    <section id="footerNav">
+                    <section class="fade-in" id="footerNav">
                         <h3>Navigation</h3>
                         <ul>
                             <li><a href="javascript:void(0)" data-id="main">Main</a></li>
@@ -741,7 +741,7 @@
                             </li>
                         </ul>
                     </section>
-                    <section>
+                    <section class="fade-in">
                         <h3>Credits</h3>
                         <ul>
                             <li>
@@ -772,7 +772,7 @@
                             </li>
                         </ul>
                     </section>
-                    <section>
+                    <section class="fade-in">
                         <h3>Links</h3>
                         <ul>
                             <li>
