+ loading, lazy images, bg-clr in black theme

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,12 @@
         <title>IMO | Password generator</title>
     </head>
     <body>
+        <div class="loading">
+            <div class="center">
+                <div class="loader"><span class="loader-inner"></span></div>
+                <h3>loading</h3>
+            </div>
+        </div>
         <header class="parent" id="main">
             <nav class="topnav" id="topnav">
                 <div class="container">
@@ -206,10 +212,7 @@
                     </form>
                 </div>
                 <div class="img bg">
-                    <img
-                        src="./images/Home/1.svg"
-                        alt="A happy man satisfied with our service"
-                    />
+                    <img src="./images/Home/1.svg" alt="A happy man satisfied with our service"/>
                 </div>
             </div>
             <div class="readMore">
@@ -225,7 +228,7 @@
                     <li class="card fade-in">
                         <h3>Privacy</h3>
                         <div class="img">
-                            <img src="./images/Features/1.svg" alt="Privacy" />
+                            <img loading="lazy" src="./images/Features/1.svg" alt="Privacy" />
                         </div>
                         <p>
                             We respect your private life and we do not collect any of your
@@ -235,7 +238,7 @@
                     <li class="card fade-in">
                         <h3>Full control</h3>
                         <div class="img">
-                            <img src="./images/Features/2.svg" alt="Full control" />
+                            <img loading="lazy" src="./images/Features/2.svg" alt="Full control" />
                         </div>
                         <p>
                             We offer you several options to customize your next password
@@ -245,7 +248,7 @@
                     <li class="card fade-in">
                         <h3>Open source</h3>
                         <div class="img">
-                            <img src="./images/Features/3.svg" alt="Open source" />
+                            <img loading="lazy" src="./images/Features/3.svg" alt="Open source" />
                         </div>
                         <p>
                             Our site is open source under the GNU AGPLv3 license, which
@@ -255,7 +258,7 @@
                     <li class="card fade-in">
                         <h3>No ads</h3>
                         <div class="img">
-                            <img src="./images/Features/4.svg" alt="No ads" />
+                            <img loading="lazy" src="./images/Features/4.svg" alt="No ads" />
                         </div>
                         <p>
                             Our service is free and voluntary and we eliminated pop-ups,
@@ -266,7 +269,7 @@
                     <li class="card fade-in">
                         <h3>Modern</h3>
                         <div class="img">
-                            <img src="./images/Features/5.svg" alt="Modern" />
+                            <img loading="lazy" src="./images/Features/5.svg" alt="Modern" />
                         </div>
                         <p>
                             We built our website with the latest technologies to make it
@@ -277,7 +280,7 @@
                     <li class="card fade-in">
                         <h3>Memorable</h3>
                         <div class="img">
-                            <img src="./images/Features/6.svg" alt="Memorable" />
+                            <img loading="lazy" src="./images/Features/6.svg" alt="Memorable" />
                         </div>
                         <p>
                             Our goal is to offer you a unique experience so we made easy
@@ -400,7 +403,7 @@
                 <div class="profile">
                     <div class="public">
                         <div class="img">
-                            <img src="./images/AboutUs/2.png" alt="IDJA Mohamed Ouanis" />
+                            <img loading="lazy" src="./images/AboutUs/2.png" alt="IDJA Mohamed Ouanis" />
                         </div>
                         <h3>IDJA Mohamed Ouanis</h3>
                     </div>
@@ -482,7 +485,7 @@
                 </ul>
                 <button class="from-right slide-in" type="submit" id="emailButton">Email us</button>
                 <div class="img bg from-left slide-in">
-                    <img src="./images/ContactUs/1.svg" alt="customers service" />
+                    <img loading="lazy" src="./images/ContactUs/1.svg" alt="customers service" />
                 </div>
             </div>
         </div>
@@ -691,7 +694,7 @@
             <div class="footer__main parent">
                 <div class="container">
                     <section class="img fade-in">
-                        <img src="./images/logo128.jpg" alt="IMO logo" />
+                        <img loading="lazy" src="./images/logo128.jpg" alt="IMO logo" />
                     </section>
                     <section class="fade-in">
                         <h3>Information</h3>
