statistics fade-in

--- a/src/index.html
+++ b/src/index.html
@@ -492,7 +492,7 @@
         <div class="statistics parent">
             <div class="container">
                 <ul>
-                    <li class="from-left slide-in">
+                    <li class="fade-in">
                         <div class="square">
                             <div>
                                 20
@@ -513,7 +513,7 @@
                             <h5>72H</h5>
                         </div>
                     </li>
-                    <li class="from-right slide-in">
+                    <li class="fade-in">
                         <div class="square">
                             <i class="fas fa-user-circle"></i>
                         </div>
