solve IE11 problems
onload check if the browser support grids, edit index, features , aboutus, contactus,footer

--- a/src/index.html
+++ b/src/index.html
@@ -449,7 +449,7 @@
                 </div>
             </div>
         </div>
-        <div class="contactUs parent" id="contactUs">
+        <div class="contactUs parent allow" id="contactUs">
             <div class="container">
                 <h2 class="from-right slide-in">
                     Need help? <br />
