update IE observer fixer

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <header class="parent" id="main">
             <nav class="topnav" id="topnav">
                 <div class="container">
-                    <div class="logo">
+                    <div class="logo" id="testObserver">
                         <div class="img">
                             <img src="./images/logo50.jpg" alt="imo logo" />
                         </div>
@@ -117,7 +117,7 @@
                             </label>
                         </div>
                         <div class="buttons">
-                            <button type="button" id="showSettings">
+                            <button type="button">
                                 Settings
                                 <i class="fas fa-cog"></i>
                             </button>
