solve settings Btn
the problem created when i update the testObserver

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                             </label>
                         </div>
                         <div class="buttons">
-                            <button type="button">
+                            <button type="button" id="showSettings">
                                 Settings
                                 <i class="fas fa-cog"></i>
                             </button>
