--- a/src/index.html
+++ b/src/index.html
@@ -808,6 +808,7 @@
                     </h6>
                 </div>
             </div>
+            <a href="./google6e123ea99d179e07.html"></a>
         </footer>
     </body>
     <script src="./index.js"></script>
