+add logo(go main), edit navigation

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <header class="parent" id="main">
             <nav class="topnav" id="topnav">
                 <div class="container">
-                    <div class="logo" id="testObserver">
+                    <div class="logo" id="testObserver" data-id="main">
                         <div class="img">
                             <img src="./images/logo50.jpg" alt="imo logo" />
                         </div>
