+new statistics page with js animation

--- a/src/index.html
+++ b/src/index.html
@@ -489,40 +489,29 @@
                 </div>
             </div>
         </div>
-        <div class="statistics parent">
+        <div class="stats parent" id="stats">
+            <h2>Our Awesome Stats</h2>
             <div class="container">
-                <ul>
-                    <li class="from-left slide-in">
-                        <div class="square">
-                            <div>
-                                20
-                                <span>21</span>
-                            </div>
-                        </div>
-                        <div class="details">
-                            <h4>Started</h4>
-                            <h5>Year</h5>
-                        </div>
-                    </li>
-                    <li class="fade-in">
-                        <div class="square">
-                            <i class="fas fa-clock"></i>
-                        </div>
-                        <div class="details">
-                            <h4>Effort</h4>
-                            <h5>72H</h5>
-                        </div>
-                    </li>
-                    <li class="from-right slide-in">
-                        <div class="square">
-                            <i class="fas fa-user-circle"></i>
-                        </div>
-                        <div class="details">
-                            <h4>Visitors</h4>
-                            <h5>+1k</h5>
-                        </div>
-                    </li>
-                </ul>
+                <div class="box">
+                    <i class="far fa-user fa-2x fa-fw"></i>
+                    <span class="number" data-goal="1500">0</span>
+                    <span class="text">Clients</span>
+                </div>
+                <div class="box">
+                    <i class="far fa-handshake fa-2x fa-fw"></i>
+                    <span class="number" data-goal="13">0</span>
+                    <span class="text">Partners</span>
+                </div>
+                <div class="box">
+                    <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+                    <span class="number" data-goal="50">0</span>
+                    <span class="text">Countries</span>
+                </div>
+                <div class="box">
+                    <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+                    <span class="number" data-goal="500">0</span>
+                    <span class="text">Money</span>
+                </div>
             </div>
         </div>
         <div class="contactForm" id="popupForm">
