add pricing plans

--- a/src/index.html
+++ b/src/index.html
@@ -223,7 +223,7 @@
         </header>
         <div class="features parent" id="features">
             <div class="container">
-                <h2>Features</h2>
+                <h2 class="main-title">Features</h2>
                 <ul>
                     <li class="card fade-in">
                         <h3>Privacy</h3>
@@ -292,7 +292,7 @@
         </div>
         <div class="faqs parent" id="faqs">
             <div class="container">
-                <h2>FAQs</h2>
+                <h2 class="main-title">FAQs</h2>
                 <ul class="column">
                     <li class="from-left slide-in">
                         <div class="question">
@@ -489,8 +489,62 @@
                 </div>
             </div>
         </div>
+        <div class="pricing parent" id="pricing">
+            <h2 class="main-title">Pricing Plans</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="title">Free</div>
+                    <img src="./images/Pricing/1.png" alt="" />
+                    <div class="price">
+                        <span class="amount">0$</span>
+                        <span class="time">Per Month</span>
+                    </div>
+                    <ul>
+                        <li>150 Passwords</li>
+                        <li>Access on one device type</li>
+                        <li>Multifactor Authentication</li>
+                        <li>Password Generator</li>
+                        <li>Basic Support</li>
+                    </ul>
+                    <a href="#">Choose Plan</a>
+                </div>
+                <div class="box popular">
+                    <div class="label">Most Popular</div>
+                    <div class="title">Advanced</div>
+                    <img src="./images/Pricing/2.png" alt="" />
+                    <div class="price">
+                        <span class="amount">3$</span>
+                        <span class="time">Per Month</span>
+                    </div>
+                    <ul>
+                        <li class="bold">All Free Features</li>
+                        <li>400 Passwords</li>
+                        <li>Access on all devices</li>
+                        <li>1GB Encrypted File Storage</li>
+                        <li>Advanced Support</li>
+                    </ul>
+                    <a href="#">Choose Plan</a>
+                </div>
+                <div class="box">
+                    <div class="title">Professional</div>
+                    <img src="./images/Pricing/3.png" alt="" />
+                    <div class="price">
+                        <span class="amount">5$</span>
+                        <span class="time">Per Month</span>
+                    </div>
+                    <ul>
+                        <li class="bold">All Advanced Features</li>
+                        <li>Unlimited Passwords</li>
+                        <li>9GB Encrypted File Storage</li>
+                        <li>Dark Web Surveillance</li>
+                        <li>Professional Support</li>
+                    </ul>
+                    <a href="#">Choose Plan</a>
+                </div>
+            </div>
+        </div>
         <div class="stats parent" id="stats">
-            <h2>Our Awesome Stats</h2>
+            <h2 class="main-title">Our Awesome Stats</h2>
             <div class="container">
                 <div class="box">
                     <i class="far fa-user fa-2x fa-fw"></i>
