main-titles hover effect

--- a/src/index.html
+++ b/src/index.html
@@ -292,7 +292,7 @@
         </div>
         <div class="faqs parent" id="faqs">
             <div class="container">
-                <h2 class="main-title">FAQs</h2>
+                <h2 class="main-title filled">FAQs</h2>
                 <ul class="column">
                     <li class="from-left slide-in">
                         <div class="question">
