Pricing: + shortcut & radius

--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,6 @@
                         <div class="links">
                             <ul class="container">
                                 <li>
-                                    <a href="javascript:void(0)" data-id="main">Main</a>
-                                </li>
-                                <li>
                                     <a href="javascript:void(0)" data-id="features"
                                         >Features</a
                                     >
@@ -77,6 +74,11 @@
                                 <li>
                                     <a href="javascript:void(0)" data-id="contactUs"
                                         >Contact</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)" data-id="pricing"
+                                        >Pricing</a
                                     >
                                 </li>
                             </ul>
